# kindle

./: Cargo.toml  README.md
src/: config.rs  light.rs  main.rs  sensor.rs  weather.rs
static/: index.html
