[package]
name = "kindle"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
btleplug = "0.11.8"
chrono = "0.4.42"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["gzip", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.49.0"
